Added error pages and linked them.

--- a/Gobot/Gobot/Errors/404.html
+++ b/Gobot/Gobot/Errors/404.html
@@ -1,11 +1,18 @@
 ﻿<!DOCTYPE html>
+
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title></title>
-	<meta charset="utf-8" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="404, not found">
+    <link rel="icon" href="~/Images/gobot_logo.png" type="image/png" sizes="16x16 32x32 64x64">
+    <title>404 - Gobot</title>
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,900,900italic,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='error.min.css' rel='stylesheet' type='text/css'>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
-
+    <h1>404</h1>
+    <span>Vous semblez être perdu. Voici la direction pour retrouver votre chemin: <a href="/">page d'accueil</a>.</span>
 </body>
 </html>
