--- a/Gobot/Gobot/Errors/412.html
+++ b/Gobot/Gobot/Errors/412.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="403, forbidden">
+    <meta name="keywords" content="412, precondition failed">
     <link rel="icon" href="~/Images/gobot_logo.png" type="image/png" sizes="16x16 32x32 64x64">
-    <title>403 - Gobot</title>
+    <title>412 - Gobot</title>
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,900,900italic,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='error.min.css' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
-    <h1>403</h1>
-    <span>Cette zone est interdite aux visiteurs, faire demi-tour <a href="/">à la page d'accueil</a>.</span>
+    <h1>412</h1>
+    <span>Préconditions envoyées par la requête non vérifiées. <a href="/">Retourner à la page d'accueil</a>.</span>
 </body>
 </html>
