Corrected a shit-ton of bugs + prevented crashes at some places + implemented missing elements + removed custom errors for better understanding of errors while debug.

--- a/Gobot/Gobot/Errors/401.html
+++ b/Gobot/Gobot/Errors/401.html
@@ -13,6 +13,6 @@
 </head>
 <body>
     <h1>401</h1>
-    <span>La requête envoyée est invalide. <a href="/">Retourner à la page d'accueil</a>.</span>
+    <span>La requête envoyée est invalide. <a href="/Account">Retourner à la page d'accueil</a>.</span>
 </body>
 </html>
