--- a/Gobot/Gobot/Errors/403.html
+++ b/Gobot/Gobot/Errors/403.html
@@ -13,6 +13,6 @@
 </head>
 <body>
     <h1>403</h1>
-    <span>Cette zone est interdite aux visiteurs, faire demi-tour <a href="/">à la page d'accueil</a>.</span>
+    <span>Cette zone est interdite aux visiteurs, faire demi-tour <a href="/Account">à la page d'accueil</a>.</span>
 </body>
 </html>
