--- a/Gobot/Gobot/Errors/404.html
+++ b/Gobot/Gobot/Errors/404.html
@@ -13,6 +13,6 @@
 </head>
 <body>
     <h1>404</h1>
-    <span>Vous semblez être perdu. Voici la direction pour retrouver votre chemin: <a href="/">page d'accueil</a>.</span>
+    <span>Vous semblez être perdu. Voici la direction pour retrouver votre chemin: <a href="/Account">page d'accueil</a>.</span>
 </body>
 </html>
