--- a/Gobot/Gobot/Errors/405.html
+++ b/Gobot/Gobot/Errors/405.html
@@ -13,6 +13,6 @@
 </head>
 <body>
     <h1>405</h1>
-    <span>La requête envoyée est interdite. <a href="/">Retourner à la page d'accueil</a>.</span>
+    <span>La requête envoyée est interdite. <a href="/Account">Retourner à la page d'accueil</a>.</span>
 </body>
 </html>
