--- a/Gobot/Gobot/Errors/406.html
+++ b/Gobot/Gobot/Errors/406.html
@@ -13,6 +13,6 @@
 </head>
 <body>
     <h1>406</h1>
-    <span>La ressource demandée n'est pas disponible dans ce format. <a href="/">Retourner à la page d'accueil</a>.</span>
+    <span>La ressource demandée n'est pas disponible dans ce format. <a href="/Account">Retourner à la page d'accueil</a>.</span>
 </body>
 </html>
