--- a/Gobot/Gobot/Errors/412.html
+++ b/Gobot/Gobot/Errors/412.html
@@ -13,6 +13,6 @@
 </head>
 <body>
     <h1>412</h1>
-    <span>Préconditions envoyées par la requête non vérifiées. <a href="/">Retourner à la page d'accueil</a>.</span>
+    <span>Préconditions envoyées par la requête non vérifiées. <a href="/Account">Retourner à la page d'accueil</a>.</span>
 </body>
 </html>
