--- a/Gobot/Gobot/Errors/500.html
+++ b/Gobot/Gobot/Errors/500.html
@@ -13,6 +13,6 @@
 </head>
 <body>
     <h1>500</h1>
-    <span>Erreur interne du serveur. Veuillez réessayer à partir de <a href="/">la page d'accueil</a>.</span>
+    <span>Erreur interne du serveur. Veuillez réessayer à partir de <a href="/Account">la page d'accueil</a>.</span>
 </body>
 </html>
