--- a/Gobot/Gobot/Errors/501.html
+++ b/Gobot/Gobot/Errors/501.html
@@ -13,6 +13,6 @@
 </head>
 <body>
     <h1>501</h1>
-    <span>Ce que vous tentez d'exécuter n'a pas été implémentée par le serveur. <a href="/">Retourner à la page d'accueil</a>.</span>
+    <span>Ce que vous tentez d'exécuter n'a pas été implémentée par le serveur. <a href="/Account">Retourner à la page d'accueil</a>.</span>
 </body>
 </html>
